write somethine in DBN

--- a/source/_posts/2021-03-02_DBN.md
+++ b/source/_posts/2021-03-02_DBN.md
@@ -9,6 +9,6 @@ abbrlink: 34f88668
 date: 2021-03-02 14:39:36
 ---
 
-
+A Deep Belief Network (DBN) is a multi-layer generative graphical model. DBNs have bi-directional connections (RBM-type connections) on the top layer while the bottom layers only have top-down connections. They are trained using layerwise pre-training. Pre-training occurs by training the network component by component bottom up: treating the first two layers as an RBM and training, then treating the second layer and third layer as another RBM and training for those parameters. **Ref:** [Deep Belief Network](https://paperswithcode.com/method/deep-belief-network)
 
 <!-- more -->
